moved some stuff around so that the search page continually shows the serach form and the search results
	new file:   app/views/layouts/search.rhtml
	modified:   app/views/search/index.rhtml
	modified:   config/routes.rb
	modified:   db/migrate/1_create_tables.rb
	modified:   db/schema.rb
	deleted:    public/index.html

--- a/app/views/layouts/search.rhtml
+++ b/app/views/layouts/search.rhtml
@@ -8,5 +8,13 @@
       <input type="text" name="query" />
       <input type="submit" name="Search" />
     </form>
+    <hr />
+    <h1>Search Results</h1>
+    for query: <%= @query %>
+    <ul>
+      <% @results.each do |result| %>
+        <li><%= result %></li>
+      <% end %>
+    </ul>
   </body>
 </html>
