fixed tests for models to reflect schema changes
	modified:   app/controllers/search_controller.rb
	new file:   app/helpers/test_helper.rb
	modified:   app/views/layouts/search.rhtml
	deleted:    app/views/search/index.rhtml
	new file:   test/fixtures/controllers/search_controller_test.rb
	deleted:    test/performance/browsing_test.rb
	modified:   test/unit/models/bible_test.rb

--- a/app/views/layouts/search.rhtml
+++ b/app/views/layouts/search.rhtml
@@ -9,12 +9,22 @@
       <input type="submit" name="Search" />
     </form>
     <hr />
-    <h1>Search Results</h1>
-    for query: <%= @query %>
-    <ul>
-      <% @results.each do |result| %>
-        <li><%= result %></li>
-      <% end %>
-    </ul>
+    <h1>Results for query: <%= @query %></h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Bible</th>
+          <th>Reference</th>
+          <th>Text</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @results.each do |result| %>
+          <tr>
+            <td><%= result %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </body>
 </html>
